Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
         </div>
     </section>
 
-    <!-- Footer -->
+        <!-- Footer -->
     <footer class="bg-gray-800">
         <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
@@ -443,6 +443,12 @@
                 <p class="mt-8 text-base text-gray-400 md:mt-0 md:order-1">
                     &copy; 2024 Villa Florencia. Todos los derechos reservados.
                 </p>
+            </div>
+            <!-- Added Powered by Duality Domain link -->
+            <div class="mt-4 text-center">
+                <a href="https://dualitydomain.github.io/Dualitydomain/" target="_blank" rel="noopener noreferrer" class="text-sm text-gray-400 hover:text-white transition duration-300 ease-in-out">
+                    Powered by Duality Domain
+                </a>
             </div>
         </div>
     </footer>
